# litellm-AgentRouter

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  debug_config.py  docker-compose.yml  entrypoint.sh  local_openai_proxy.py  package-lock.json  package.json  pyproject.toml  requirements-test.txt  requirements.txt
docs/: assistant_ack.txt
node/: README.md  main.mjs  upstream-proxy.mjs
node/lib/: client.mjs  config.mjs  constants.mjs  fetchVersion.mjs  logger.mjs  proxy.mjs  router.mjs  routes.mjs  server.mjs
node/tests/: upstream-proxy.test.mjs
specs/: 1-deepseek-v3.2-integration-prd.md  10-multi-upstream-support-prd.md  10-python-entrypoint-migration-prd.md  11-nodejs-upstream-integration-prd.md  12-proxy-model-keys-retirement-prd.md  2-request-telemetry-logging-prd.md  3-model-alias-unification-prd.md  4-src-package-refactor-prd.md  5-CLAUDE_CODE_CLIENT_REASONING_PARAM.md  5-reasoning-parameter-filter-prd.md  6-grok-code-fast-1-integration-prd.md  7-glm-4.6-integration-prd.md  8-centralized-config-object-prd.md  9-telemetry-middleware-refresh-prd.md  deepseek-v3.2-integration-prd.md
src/: cli.py  config.py  main.py  proxy.py  telemetry.py  utils.py
src/config/: __init__.py  config.py  entrypoint.py  models.py  parsing.py  rendering.py
src/middleware/: alias_lookup.py  reasoning_filter.py  registry.py  telemetry.py
src/node/: __init__.py  process.py
src/telemetry/: __init__.py  alias_lookup.py  instrumentation.py  middleware.py
tests/: README.md  conftest.py
tests/integration/: conftest.py  (+12 more)
(+132 files in other folders)
